# fermiviewer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: cross-section-grain-gui-remediation.md  feature_triage.md  frontend-module-architecture.md  gui_audit.md  gui_parity_audit_2026-06-15.md  parity_report.md  trained-grain-spatial-preview.md  w3_imaging_audit.md
docs/theory/: eds-spectroscopy.md  interface-roughness.md  measurement_geometry.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: loading.html
frontend/src/: App.tsx  main.tsx  theme-web.css  theme.css
frontend/src/components/Inspector/: AdjustPanel.tsx  CalibrationCard.tsx  Card.test.tsx  Card.tsx  CompareInspector.tsx  CustomMetaCard.tsx  ExportCard.tsx  HistoryCard.test.tsx  HistoryCard.tsx  Inspector.tsx  MeasurePanel.tsx  RoiManagerCard.test.tsx  RoiManagerCard.tsx  ScaleBarCard.tsx  ToolsBrowser.test.tsx  ToolsBrowser.tsx  TransformPanel.test.tsx  TransformPanel.tsx  useCollapsedGroups.test.ts  useCollapsedGroups.ts
frontend/src/components/Shell/: CompactLayout.test.tsx  CompactLayout.tsx  DesktopMenus.test.tsx  DesktopMenus.tsx  MenuBar.tsx  StatusBar.test.tsx  StatusBar.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  TitleBar.tsx  WorkspaceSwitcher.test.tsx  WorkspaceSwitcher.tsx
frontend/src/components/Stage/: CaptureBanner.tsx  ColorbarChip.tsx  CompareStage.tsx  DockPlot.tsx  EmptyStage.test.tsx  EmptyStage.tsx  FloatTools.test.tsx  FloatTools.tsx  LayersOverlay.tsx  MeasureOverlay.test.tsx  MeasureOverlay.tsx  Minimap.tsx  ScaleBarOverlay.tsx  ScribbleOverlay.tsx  SideBySideStage.tsx  SpectrumProbeMarker.test.tsx  SpectrumProbeMarker.tsx  Stage.tsx  StageCtxMenu.tsx
frontend/src/components/icons/: Icon.test.tsx  (+1 more)
frontend/src/gl/: render.ts
frontend/src/hooks/: useAnalysisRoi.shared.test.tsx  useAnalysisRoi.test.ts  useAnalysisRoi.ts  useCubeAutoExplore.test.ts  useCubeAutoExplore.ts  useEdsPeakMarkers.ts
frontend/src/lib/: analysisQuality.test.ts  analysisQuality.ts  api.ts  atomsCsv.test.ts  captureSteps.test.ts  captureSteps.ts  colormaps.test.ts  colormaps.ts  composite.test.ts  composite.ts  crossSectionReport.test.ts  crossSectionReport.ts  display.test.ts  display.ts  edsApi.test.ts  edsExploreCsv.test.ts  edsExploreCsv.ts  edsModelFitApi.test.ts  edsQuantCsv.test.ts  edsQuantCsv.ts  eelsAdvancedApi.test.ts  eelsQuantCsv.test.ts  eelsQuantCsv.ts  errlog.ts  export.test.ts  export.ts  formatUncertainty.test.ts  formatUncertainty.ts  fuzzy.test.ts  fuzzy.ts  geometry.test.ts  geometry.ts  grainWorkflow.ts  grainsApi.test.ts  grainsCsv.test.ts  grainsCsv.ts  groups.test.ts  groups.ts  layersApi.test.ts  lifecycle.ts  (+23 more)
frontend/src/store/: appearancePreview.ts  commands.test.ts  commands.ts  crossSection.test.ts  crossSection.ts  params.test.ts  params.ts  scribble.test.ts  scribble.ts  stage.ts  viewer.test.ts  viewer.ts  workshop.test.ts  workshop.ts
frontend/src/test/: setup.ts  sizeRatchet.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/fermiviewer/: __init__.py  __main__.py  datastruct.py  devsamples.py  jobs.py  launch.py  logbuf.py  models.py  netprobe.py  server.py  server_launch.py  session.py  usermeta.py  workspaces.py
src/fermiviewer/api/: __init__.py
src/fermiviewer/assets/: fonts.py
src/fermiviewer/calc/: __init__.py  atom_strain.py  atoms.py  cif.py  colormaps.py  crystal.py  ctf.py  defects.py  diffraction.py  diffraction_calib.py  diffraction_simulate.py  eds.py  eds_artifacts.py  eds_calib.py  eds_continuum.py  eds_maps.py  eds_peakfit.py  eds_zeta.py  eels.py  eels_advanced.py  eels_model.py  eels_quant.py  elements.py  export.py  filters.py  forest.py  fourier.py  gpa.py  grain_layers.py  grains.py  grains_trained.py  lattice.py  layers.py  layers_detect.py  ml.py  montage.py  normalize.py  particles.py  phase_registry.py  profiles.py  (+14 more)
src/fermiviewer/io/: __init__.py  bcf.py  bcf_cube.py  calibration_db.py  dm.py  emd.py  hdf5_common.py  hspy.py  images.py  metadata.py  mrc.py  msa.py  nanoscope.py  nexus.py  registry.py  ser.py  session_file.py  sfs.py
src/fermiviewer/ops/: __init__.py  base.py  batch.py  catalogue.py  provenance.py  registry.py
src/fermiviewer/routes/: __init__.py  _arrays.py  _export_render.py  _export_svg.py  analysis.py  analysis_wireups.py  calibration.py  dev.py  diffraction_setup.py  eds_advanced.py  eds_quant.py  eels_advanced.py  export.py  export_batch.py  filter.py  grains_trained.py  images.py  imaging_ops.py  jobs_api.py  layers.py  measure.py  session_io.py  spectral_fit.py  structure.py  usermeta.py
tests/: conftest.py  test_afm_examples.py  test_api_a3_a4_a5_a8.py  test_api_analysis.py  test_api_analysis2.py  test_api_atoms_depth.py  test_api_calibration.py  test_api_diffraction_setup.py  test_api_eds_advanced.py  test_api_eels_adv.py  test_api_eels_advanced.py  test_api_export.py  test_api_filter.py  test_api_images.py  test_api_images_extra.py  test_api_imaging_ops_gaps.py  test_api_jobs.py  test_api_layers.py  test_api_session_io.py  test_api_spectral_fit.py  test_api_workspaces.py  test_assets_fonts.py  test_atoms_grains.py  test_bcf.py  test_bcf_examples.py  test_calc_roi.py  test_cif.py  test_crystal.py  test_csrf_guard.py  test_datastruct.py  test_dev_samples.py  test_diffraction.py  test_diffraction_calib.py  test_diffraction_rings_roi.py  test_dm_contract.py  test_dm_golden.py  test_eds.py  test_eds_artifacts.py  test_eds_calib.py  test_eds_continuum.py  (+57 more)
tests/fixtures/: minidm4.py  miniemd.py  minimrc.py  minisfs.py  nanoscope.py  ser.py
tests/golden/: diffraction.json  eds_tables.json  eels_realdata.json  imaging.json  manifest.json  parsers_committed.json
tools/: fetch_real_data.py
tools/bundle/: fv-server.spec  fv_entry.py
tools/matlab/: freeze_reference_values.m
tools/offline/: README-OFFLINE.md  install.py  make_bundle.py
tools/visual/: README.md  capture_matrix.py
(+103 files in other folders)
