[project]
name = "fermiviewer"
version = "0.1.0"
description = "Electron-microscopy image analysis — Python/FastAPI port of fermi-viewer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Paige Quarterman" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-image>=0.24",
    "pillow>=11",
    "tifffile>=2024.8",
    "orjson>=3.10",
    "python-multipart>=0.0.12",
    "pywebview>=6.2.1",
]
# LICENSE GUARDRAIL: no GPL packages (rosettasciio, hyperspy, exspy) may
# ever appear in [project.dependencies] — this project is Apache-2.0.
# rosettasciio is permitted ONLY in the 'oracle' dev group below, as a
# test-time cross-validation oracle. tests/test_repo_integrity.py enforces.

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "httpx>=0.27",
]
bundle = [
    # build-time only (GPL w/ bundling exception - never a runtime dep):
    # packages the server as a self-contained sidecar for the installer
    "pyinstaller>=6.10",
]
oracle = [
    # GPL-3 — dev/test only, never shipped. Cross-validates our parsers.
    "rosettasciio>=0.6",
]

[project.scripts]
fv = "fermiviewer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fermiviewer"]
# OFL-licensed font vendored for baked-text export (PIL TTF path)
artifacts = ["src/fermiviewer/assets/fonts/*.ttf", "src/fermiviewer/assets/fonts/OFL.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C90",           # mccabe complexity
    "PLR0915",       # too-many-statements (god-function guard)
]
[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Data tables read best one-record-per-line; wrapping 47 phase rows at
# 100 chars destroys the column alignment that makes them auditable.
"src/fermiviewer/calc/crystal.py" = ["E501"]

[tool.ruff.lint.pylint]
max-statements = 60

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# tifffile's source uses py3.12 `type` statements; don't analyze it under
# our 3.11 floor — treat it as an opaque dependency.
module = "tifffile.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
# scipy ships no inline types; treat as opaque (scipy-stubs is heavy and
# the uv add kept hitting OneDrive file locks).
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "parser: file-format parsers (io/)",
    "imaging: core imaging algorithms (calc/imaging)",
    "eels: EELS analysis (calc/eels)",
    "eds: EDS analysis (calc/eds)",
    "diffraction: diffraction + crystallography (calc/diffraction)",
    "api: FastAPI endpoint tests",
    "golden: compares against tests/golden/ MATLAB reference values",
    "realdata: needs the local-only instrument corpus (skips when absent)",
    "oracle: needs the rosettasciio dev oracle installed",
]

[tool.coverage.run]
source = ["fermiviewer"]
# realdata/oracle tests skip in CI but cover no unique paths — the
# threshold is calibrated against the no-corpus run, so CI and local agree.

[tool.coverage.report]
# The gate (--cov-fail-under) lives in the CI step, NOT in addopts, so
# marker-scoped runs (e.g. `pytest -m "eels and golden"`) don't false-fail.
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.uv]
# OneDrive's cloud-file driver rejects hardlinks (os error 396)
link-mode = "copy"
