[package]
name = "fermiviewer-shell"
version = "0.1.0"
description = "FermiViewer desktop shell (Tauri 2 — handoff §11 option A)"
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
